// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountDetails should render correctly with empty transactions 1`] = `
<ul
  className="sc-htpNat bWEXTj"
>
  <li>
    <label
      className="sc-bwzfXH EulNe"
    >
      Account Name
    </label>
    <span
      className="sc-bdVaJa dgblDn"
    >
      Ivo
    </span>
  </li>
  <li>
    <label
      className="sc-bwzfXH EulNe"
    >
      Account Number
    </label>
    <span
      className="sc-bdVaJa dgblDn"
    >
      io@io.com
    </span>
  </li>
  <li>
    <label
      className="sc-bwzfXH EulNe"
    >
      Availble Funds
    </label>
    <span
      className="sc-bdVaJa dgblDn"
    >
      £
      100000
    </span>
  </li>
  <li>
    <label
      className="transaction sc-bwzfXH EulNe"
    >
      Transactions
    </label>
    <span
      className="sc-bdVaJa dgblDn"
    >
      No Transactions
    </span>
  </li>
</ul>
`;

exports[`AccountDetails should render correctly with transactions 1`] = `
<ul
  className="sc-htpNat bWEXTj"
>
  <li>
    <label
      className="sc-bwzfXH EulNe"
    >
      Account Name
    </label>
    <span
      className="sc-bdVaJa dgblDn"
    >
      Ivo
    </span>
  </li>
  <li>
    <label
      className="sc-bwzfXH EulNe"
    >
      Account Number
    </label>
    <span
      className="sc-bdVaJa dgblDn"
    >
      io@io.com
    </span>
  </li>
  <li>
    <label
      className="sc-bwzfXH EulNe"
    >
      Availble Funds
    </label>
    <span
      className="sc-bdVaJa dgblDn"
    >
      £
      100000
    </span>
  </li>
  <li>
    <label
      className="transaction sc-bwzfXH EulNe"
    >
      Transactions
    </label>
    <table
      className=" responsiveTable"
    >
      <thead>
        <tr>
          <th>
            Name
          </th>
          <th>
            Email
          </th>
          <th>
            Amount (total - £
            0
            )
          </th>
          <th>
            Date
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </li>
</ul>
`;
